@@ -1,3 +1,6 @@
+2005-04-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* usecode/ucinternal.*: reset all statics when loading
+
 2005-04-20    <jeff@mini.nerble.net>
 
 	* usecode/ucinternal.cc: Increase max. # of global flags to 2048.
